--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Try it Yourself »
     </head> 
      
     <body>
-<h1>My First Heading</h1>
+<h1 onclick="myOtherFunction(num9, num2)">My First Heading</h1>
 <p class="para">My first paragraph.</p>
         
 <ol>
@@ -19,4 +19,4 @@ Try it Yourself »
 </ol>
 
     </body>
-</html>r
+</html>
